caught up on albums! plus mobile table css tweak to prevent overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,7 +24,7 @@ table {
   table-layout: fixed;
   margin: auto;
   width: 80vh;
-  max-width: 80vh;
+  max-width: 100%;
 }
 
 td, th {
